--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,9 +5,13 @@
 }
 
 .btn {
-    border-radius: 0% !important;
+    border-radius: 0%;
 }
 
 .form-control {
-    border-radius: 0% !important;
+    border-radius: 0%;
+}
+
+.categories .card {
+    border: none;
 }
